# rust-crud

./: .env  Cargo.toml  README.md
src/: handlers.rs  main.rs
src/database/: connection.rs  mod.rs
src/database/models/: mod.rs  new_user.rs  update_user.rs  user.rs
src/database/operations/: create_user.rs  delete_user.rs  get_user_by_id.rs  mod.rs  update_user.rs
src/database/schemas/: users.rs  users_table.rs
