[package]
name = "crud_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "^2.0.2", features = ["postgres", "serde_json", "r2d2", "uuid", "chrono"] }
# diesel-async = { version = "0.2.0", features = ["postgres"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures = "0.3.1"
r2d2 = "0.8.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.48", features = ["preserve_order"]}
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
actix-rt = "1.0.0"
pbkdf2 = "0.11"
rand_core = { version = "0.6", features = ["std"] }
